--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url('@fontsource/dm-sans/400.css');
-@import url('@fontsource/dm-sans/500.css');
-@import url('@fontsource/dm-sans/700.css');
+@import '@fontsource/dm-sans/400.css';
+@import '@fontsource/dm-sans/500.css';
+@import '@fontsource/dm-sans/700.css';
 
 /* D'CORE Systems Theme Styles */
 @import './styles/themes.css';
